@@ -2586,4 +2586,23 @@ or download tarballs for
 </p>
     </content>
   </item>
+
+  <item>
+    <date>2006-07-20 18:28</date>
+    <title>GNonLin 0.10.5 release</title>
+    <content>
+<p>
+The GStreamer team is proud to announce a new release in the 0.10.x stable
+series of GNonLin.
+</p>
+<p>
+Check out release notes for
+<a href="&site;/releases/gnonlin/0.10.5.html">gnonlin</a>,
+or download tarballs for
+<a href="&site;/src/gnonlin/gnonlin-0.10.5.tar.bz2">gnonlin</a>.
+</p>
+    </content>
+  </item>
+
+
 </news>
