@@ -1,4 +1,4 @@
-releases = 0.10.4 0.10.3 0.10.2 0.10.1
+releases = 0.10.5 0.10.4 0.10.3 0.10.2 0.10.1
 
 built_pages = \
 	$(releases) \
