@@ -1,3 +1,12 @@
+2006-07-20  Edward Hervey  <edward@fluendo.com>
+
+	* src/htdocs/entities.gst:
+	* src/htdocs/news/news.xml:
+	* src/htdocs/releases/gnonlin/0.10.5.xml:
+	* src/htdocs/releases/gnonlin/Makefile.am:
+
+	Releasing gnonlin 0.10.5 "Beavis and Zidane"
+
 2006-07-14  Jan Schmidt  <thaytan@mad.scientist.com>
 
 	* src/htdocs/entities.gst:
